--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="I’m Trace Chambers, a creative graphic designer with over two years of experience in Adobe Creative Cloud. Explore my portfolio showcasing innovative branding, digital illustrations, and print design, all focused on meaningful visuals that enhance user experiences. Let's collaborate on your next project!">
     <title>Trace Chambers — Graphic Designer</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
     <link rel="stylesheet" href="styles.css">
