--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="#contact">Contact</a>
     </div>
     <div class="footer-icons">
-        <a href="https://instagram.com/tracecgraphicdesign" target="_blank">
+        <a href="https://instagram.com/tracegraphicdesign" target="_blank">
             <img src="images/icons/instagram.png" alt="instagram logo">
         </a>
         <a href="https://linkedin.com/in/tracechambers" target="_blank">
