--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trace Chambers — Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,6 +56,12 @@
         <a href="bummer.html" class="portfolio-item">
             <img src="images/bummer.png" alt="bummer album">
         </a>
+        <a href="one-day.html" class="portfolio-item">
+            <img src="images/one-day.png" alt="one day album">
+        </a>
+        <a href="you-made-me-feel.html" class="portfolio-item">
+            <img src="images/you-made-me-feel.png" alt="you made me feel cover image">
+        </a>
     </section>
     <footer>
     <a href="index.html" class="logo">
@@ -68,7 +73,7 @@
         <a href="#contact">Contact</a>
     </div>
     <div class="footer-icons">
-        <a href="https://instagram.com/tracegraphicdesign" target="_blank">
+        <a href="https://instagram.com/tracecgraphicdesign" target="_blank">
             <img src="images/icons/instagram.png" alt="instagram logo">
         </a>
         <a href="https://linkedin.com/in/tracechambers" target="_blank">
